feat: migrate to PostgreSQL for Vercel deployment
- Switch from SQLite to PostgreSQL (Vercel Postgres)
- Add prisma generate to build script
- Update README with Vercel deployment instructions
- Remove SQLite migrations

--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
+    "postinstall": "prisma generate",
     "start": "next start",
     "lint": "next lint",
     "db:seed": "npx tsx prisma/seed.ts",
-    "db:reset": "npx prisma migrate reset --force"
+    "db:push": "prisma db push",
+    "db:reset": "prisma migrate reset --force"
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "@vercel/postgres": "^0.10.0",
     "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
     "next": "14.2.35",
